src/objects/ProofOfDelivery__c.object
<CustomObject>
    <description>SFDC1-4703: Creating a child object for contract where all the proof of deliveries are uploaded.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>SFDC1-4703: Adding Account Name field.</description>
        <formula>Contract__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Account related to the Contract.</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-8903 Case lookup field to POD object</description>
        <inlineHelpText>Case</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Proof Of Deliveries</relationshipLabel>
        <relationshipName>ProofOfDeliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC1-4703: Adding Comments field.</description>
        <inlineHelpText>Please enter any special comments for this Proof of Delivery.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <description>SFDC1-4703: Adding Contract End Date field.</description>
        <formula>Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract End Date.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <description>SFDC1-4703: Adding Contract Start Date field.</description>
        <formula>Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Start Date.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>SFDC1-4703: Adding Contract field.</description>
        <inlineHelpText>Contract to which this Proof of Delivery attachment belongs to.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Proof Of Deliveries</relationshipLabel>
        <relationshipName>ProofOfDeliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Proof Of Delivery</label>
    <nameField>
        <label>Proof Of Delivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proof Of Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>